# ave3d

./: .gitmodules  CMakeLists.txt  README.md
data/meshes/: cerberus2.fbx  siuzanna.fbx
data/shaders/: skybox_vs.glsl  tonemap_fs.glsl
src/: opengl.cpp  opengl.hpp
src/common/: application.cpp  application.hpp  image.cpp  image.hpp  mesh.cpp  mesh.hpp  renderer.hpp  utils.cpp
